# cmake_lab

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt
lab2/Step1/: CMakeLists.txt  tutorial.cxx
lab2/Step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
lab2/Step2/MathFunctions/: CMakeLists.txt
lab2/Step3/: CMakeLists.txt
lab2/Step4/: CMakeLists.txt
lab2/Step4/MathFunctions/: CMakeLists.txt
lab2/Step5/: CMakeLists.txt
lab2/Step5/MathFunctions/: CMakeLists.txt
lab2/Step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
lab2/Step8/: CMakeLists.txt  python_cmd.py
lab2/Step8/MathFunctions/: CMakeLists.txt  mysqrt.cxx
lab2/Step9/: CMakeLists.txt
libsrc/: i.cpp
